--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.1.0",
     "@capacitor/haptics": "5.0.5",
+    "@capacitor/ios": "5.1.0",
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
