--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "volta": {
+    "node": "18.17.0"
+  }
 }
