--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@ngrx/schematics": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^12.11.1",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "5.3.0",
